[package]
name = "classicl_server"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://gitlab.com/nokoe/classicl-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
classicl = { git = "https://gitlab.com/nokoe/classicl" }
tokio = { version = "1.21.0", features = ["full"] }
flate2 = "1.0.24"
noise = "0.7.0"
clap = { version = "3.2.20", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.17"
simple_logger = "2.3.0"
