[package]
name = "classicl_server"
version = "1.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://gitlab.com/nokoe/classicl-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
classicl = { git = "https://gitlab.com/nokoe/classicl" }
tokio = { version = "1.25.0", features = ["full"] }
flate2 = "1.0.25"
noise = "0.7.0"
clap = { version = "4.1.6", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.17"
env_logger = "0.10.0"
